# georeset-wiki-landcover

./: .dockerignore  .gitignore  .pre-commit-config.yaml  =0.18.0  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: bounds.json  wiki_articles.json
data/alsace_corine_land_use_2018/: occupation_sol_2018.shx  wfsrequest.txt
data/classification/: README.md
data/experiments/: README.md
docs/: agent_playbook.md  architecture.md  artifacts.md  cli.md  common_failure_modes.md  configuration.md  data_flow.md  index.md  repo_map.md  reproducibility.md  troubleshooting.md
docs/diagrams/: pipeline_diagram.fdb_latexmk  pipeline_diagram.fls  pipeline_diagram.tex
docs/experiments/: 000_experiment_summary.md  README.md  article_text_classification_e2e_with_shuffled_control_v1_analysis.md  article_text_classification_gemma4_31b_it_q4_0_analysis.md  article_text_classification_spatial_confidence_v1_analysis.md  experiment_report.md  index.html
docs/experiments/001_qwen_e2e_shuffled_control/: analysis.html  analysis.md  analysis_detailed.html
docs/experiments/002_corine_spatial_confidence/: README.md  analysis_detailed.html
docs/experiments/003_qwen_spatial_confidence_reevaluation/: analysis.html  analysis.md  analysis_detailed.html
docs/guides/: gpu_classification_guide.md
scripts/: README.md  reproduce_small.py  validate_artifacts.py
scripts/analysis/: README.md  evaluate_predictions_with_spatial_confidence.py  run_corine_analysis.py  summarize_classification_experiment.py
scripts/cluster/: README.md  run_classification_job.sh  run_clip_linear_probe_job.sh  run_landuse_evidence_summarization_job.sh  run_quality_weighted_image_probe_job.sh  run_summarization_job.sh  run_summarization_no_place.sh  submit_classification.sh  submit_clip_linear_probe.sh  submit_landuse_evidence_summarization.sh  submit_quality_weighted_image_probe.sh  submit_summarization.sh  sync_classification.sh  sync_summaries.sh
scripts/data/: README.md  classify_articles.py  compute_corine_spatial_confidence.py  filter_pipeline.py  summarize_articles.py  summarize_landuse_evidence.py
scripts/dev/: README.md  check_repository_hygiene.py  snapshot.py
scripts/grid5000/: run_summarization_job.sh  submit_summarization.sh
src/: README.md  __init__.py  config.py  contracts.py  data_fetcher.py  map_visualizer.py  wiki_fetcher.py
src/analysis/: __init__.py  corine_polygon_stats.py  distribution_summary.py
src/classification/: __init__.py  ground_truth.py  labels.py  llm_classifier.py  metrics.py  prediction_parser.py  records.py  runner.py  task_setup.py  types.py
src/fetchers/: __init__.py  article_summarizer.py  data_fetcher.py  osm_fetcher.py  wiki_content_fetcher.py  wiki_fetcher.py
src/georeset/: __init__.py  config.py  contracts.py  experiment_paths.py
src/georeset.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/georeset/cli/: README.md  (+2 more)
src/georeset_wiki_landcover/: __init__.py  config.py  contracts.py
src/llm/: __init__.py  llama_client.py
src/scripts/: __init__.py  run_corine_analysis.py  snapshot.py  summarize_articles.py
src/spatial/: __init__.py
src/utils/: __init__.py  json_io.py
src/visualization/: __init__.py  map_visualizer.py
tests/: README.md  test_config.py  test_data_fetcher.py  test_experiment_paths.py  test_llama_client.py  test_map_visualizer.py  test_packaging_smoke.py  test_project_branding.py  test_snapshot.py  test_wiki_fetcher.py
tests/analysis/: README.md  test_article_type_assignment.py  test_article_type_metadata_loading.py  test_corine_distribution.py  test_distribution_summary.py  test_evaluate_article_type_relevance_stratified.py  test_evaluate_evidence_card_experiment.py  test_evaluate_evidence_highlights_experiment.py  test_evaluate_predictions_with_spatial_confidence.py  test_evaluate_relevance_stratified_predictions.py  test_evaluate_retrieved_evidence_windows_experiment.py  test_evaluate_subset_randomization_controls.py  test_evaluate_supervision_quality_score.py  test_evaluation_metrics.py  test_evidence_metadata_loading.py  test_label_universe.py  test_pageid_frames.py  test_prediction_loading.py  test_quality_subsets.py  test_quality_weighted_image_probe.py  test_shuffled_deltas.py  test_spatial_confidence_loading.py  test_supported_metrics.py
tests/classification/: README.md  __init__.py  test_ground_truth.py  test_labels.py  test_llm_classifier.py  test_metrics.py  test_prediction_parser.py  test_records.py  test_runner.py  test_task_setup.py  test_text_sources.py
tests/cli/: test_build_clip_label_splits.py  test_build_evidence_cards.py  test_build_evidence_highlights.py  test_build_retrieved_evidence_windows.py  test_csv_args.py  test_json_inputs.py
tests/fetchers/: README.md  test_data_fetcher.py  test_landuse_evidence_summarizer.py  test_osm_fetcher.py  test_wiki_article_type_fetcher.py  test_wiki_content_fetcher.py  test_wiki_fetcher.py
tests/scripts/: README.md  test_classification_cluster_scripts.py  test_classify_articles.py  test_compute_corine_spatial_confidence.py  test_filter_pipeline.py  test_repository_hygiene.py  test_reproducibility_scripts.py  test_run_corine_analysis.py  test_summarization_cluster_scripts.py  test_summarize_articles.py  test_summarize_classification_experiment.py  test_summarize_landuse_evidence.py
tests/spatial/: README.md  test_corine_confidence.py
tests/text/: README.md  test_evidence_cards.py  test_evidence_highlights.py  test_labels.py  test_record_access.py  test_retrieved_evidence_windows.py  test_title_scrubbing.py
tests/utils/: README.md  test_articles.py  test_boolish.py  test_json_io.py  test_math.py
tests/vision/: test_clip_embedding_cache.py  test_clip_embeddings.py  test_clip_linear_probe_experiment.py  test_clip_transformers.py  test_clip_weak_labels.py  test_clip_zero_shot.py  test_image_encoder_registry.py  test_image_probe_splits.py  test_linear_probe.py  test_sentinel_multiscale_patches.py  test_sentinel_patches.py  test_types.py  test_weighted_linear_probe.py
tests/visualization/: README.md  test_map_visualizer.py
(+237 files in other folders)
