[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "georeset"
version = "0.1.0"
description = "Geolocated Wikipedia text experiments for CORINE and OSM land-cover classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "folium>=0.18.0",
    "geopandas>=1.1.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "shapely>=2.1.2",
    "spacy>=3.8.14",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]
llm = [
    "huggingface-hub>=1.1.6",
    "llama-cpp-python>=0.3.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/georeset"]

[project.scripts]
georeset-classify-articles = "georeset.cli.data.classify_articles:main"
georeset-compute-corine-spatial-confidence = "georeset.cli.data.compute_corine_spatial_confidence:main"
georeset-filter-pipeline = "georeset.cli.data.filter_pipeline:main"
georeset-run-corine-analysis = "georeset.cli.analysis.run_corine_analysis:main"
georeset-snapshot = "georeset.cli.dev.snapshot:main"
georeset-summarize-articles = "georeset.cli.data.summarize_articles:main"
georeset-summarize-classification-experiment = "georeset.cli.analysis.summarize_classification_experiment:main"
georeset-evaluate-spatial-confidence = "georeset.cli.analysis.evaluate_predictions_with_spatial_confidence:main"

[tool.ruff]
target-version = "py310"
line-length = 100
lint.select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
]
lint.ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["georeset", "scripts"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["georeset.utils.*", "georeset.config", "georeset.contracts"]
strict = true

[[tool.mypy.overrides]]
module = ["georeset.classification.*"]
strict = true

[[tool.mypy.overrides]]
module = ["georeset.fetchers.*", "georeset.visualization.*", "scripts.*"]
strict = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_any_generics = false

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = [
    "--cov=georeset.classification",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
]
