[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "georeset"
version = "0.1.0"
description = "Geolocated Wikipedia text experiments for CORINE and OSM land-cover classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "folium>=0.18.0",
    "geopandas>=1.1.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "shapely>=2.1.2",
    "spacy>=3.8.14",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]
llm = [
    "huggingface-hub>=1.1.6",
    "llama-cpp-python>=0.3.16",
]
vision = [
    "pillow>=11.0.0",
    "planetary-computer>=1.0.0",
    "pystac-client>=0.9.0",
    "rasterio>=1.4.0",
    "torch>=2.5.0",
    "transformers>=4.50.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/georeset"]

[project.scripts]
georeset-classify-articles = "georeset.cli.data.classify_articles:main"
georeset-compute-corine-spatial-confidence = "georeset.cli.data.compute_corine_spatial_confidence:main"
georeset-filter-pipeline = "georeset.cli.data.filter_pipeline:main"
georeset-run-corine-analysis = "georeset.cli.analysis.run_corine_analysis:main"
georeset-snapshot = "georeset.cli.dev.snapshot:main"
georeset-summarize-articles = "georeset.cli.data.summarize_articles:main"
georeset-summarize-landuse-evidence = "georeset.cli.data.summarize_landuse_evidence:main"
georeset-build-evidence-cards = "georeset.cli.data.build_evidence_cards:main"
georeset-build-evidence-highlights = "georeset.cli.data.build_evidence_highlights:main"
georeset-build-retrieved-evidence-windows = "georeset.cli.data.build_retrieved_evidence_windows:main"
georeset-build-clip-label-splits = "georeset.cli.data.build_clip_label_splits:main"
georeset-fetch-sentinel-patches = "georeset.cli.data.fetch_sentinel_patches:main"
georeset-embed-clip-patches = "georeset.cli.data.embed_clip_patches:main"
georeset-summarize-classification-experiment = "georeset.cli.analysis.summarize_classification_experiment:main"
georeset-evaluate-spatial-confidence = "georeset.cli.analysis.evaluate_predictions_with_spatial_confidence:main"
georeset-evaluate-relevance-stratified = "georeset.cli.analysis.evaluate_relevance_stratified_predictions:main"
georeset-evaluate-supervision-quality-score = "georeset.cli.analysis.evaluate_supervision_quality_score:main"
georeset-fetch-wikipedia-article-types = "georeset.cli.data.fetch_wikipedia_article_types:main"
georeset-evaluate-article-type-relevance-stratified = "georeset.cli.analysis.evaluate_article_type_relevance_stratified:main"
georeset-evaluate-evidence-card-experiment = "georeset.cli.analysis.evaluate_evidence_card_experiment:main"
georeset-evaluate-evidence-highlights-experiment = "georeset.cli.analysis.evaluate_evidence_highlights_experiment:main"
georeset-evaluate-retrieved-evidence-windows-experiment = "georeset.cli.analysis.evaluate_retrieved_evidence_windows_experiment:main"
georeset-run-clip-linear-probe-experiment = "georeset.cli.analysis.run_clip_linear_probe_experiment:main"
georeset-run-clip-zero-shot-experiment = "georeset.cli.analysis.run_clip_zero_shot_experiment:main"
georeset-evaluate-subset-randomization-controls = "georeset.cli.analysis.evaluate_subset_randomization_controls:main"
georeset-build-image-probe-splits-v2 = "georeset.cli.data.build_image_probe_splits_v2:main"
georeset-fetch-sentinel-multiscale-patches = "georeset.cli.data.fetch_sentinel_multiscale_patches:main"
georeset-embed-image-patches = "georeset.cli.data.embed_image_patches:main"
georeset-run-quality-weighted-image-probe = "georeset.cli.analysis.run_quality_weighted_image_probe:main"
georeset-evaluate-image-probe-training-policy-controls = "georeset.cli.analysis.evaluate_image_probe_training_policy_controls:main"

[tool.ruff]
target-version = "py310"
line-length = 100
lint.select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
]
lint.ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["georeset", "scripts"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["georeset.utils.*", "georeset.config", "georeset.contracts"]
strict = true

[[tool.mypy.overrides]]
module = ["georeset.classification.*"]
strict = true

[[tool.mypy.overrides]]
module = ["georeset.fetchers.*", "georeset.visualization.*", "scripts.*"]
strict = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_any_generics = false

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = [
    "--cov=georeset.classification",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
]
