[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "georeset-wiki-landcover"
version = "0.1.0"
description = "Geolocated Wikipedia text experiments for CORINE and OSM land-cover classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "folium>=0.18.0",
    "geopandas>=1.1.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "shapely>=2.1.2",
    "spacy>=3.8.14",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]
llm = [
    "huggingface-hub>=1.1.6",
    "llama-cpp-python>=0.3.16",
]
vision = [
    "pillow>=11.0.0",
    "planetary-computer>=1.0.0",
    "pystac-client>=0.9.0",
    "rasterio>=1.4.0",
    "torch>=2.5.0",
    "transformers>=4.50.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/georeset_wiki_landcover"]

[project.scripts]
georeset-wiki-landcover-classify-articles = "georeset_wiki_landcover.cli.data.classify_articles:main"
georeset-wiki-landcover-compute-corine-spatial-confidence = "georeset_wiki_landcover.cli.data.compute_corine_spatial_confidence:main"
georeset-wiki-landcover-filter-pipeline = "georeset_wiki_landcover.cli.data.filter_pipeline:main"
georeset-wiki-landcover-run-corine-analysis = "georeset_wiki_landcover.cli.analysis.run_corine_analysis:main"
georeset-wiki-landcover-snapshot = "georeset_wiki_landcover.cli.dev.snapshot:main"
georeset-wiki-landcover-summarize-articles = "georeset_wiki_landcover.cli.data.summarize_articles:main"
georeset-wiki-landcover-summarize-landuse-evidence = "georeset_wiki_landcover.cli.data.summarize_landuse_evidence:main"
georeset-wiki-landcover-build-evidence-cards = "georeset_wiki_landcover.cli.data.build_evidence_cards:main"
georeset-wiki-landcover-build-evidence-highlights = "georeset_wiki_landcover.cli.data.build_evidence_highlights:main"
georeset-wiki-landcover-build-retrieved-evidence-windows = "georeset_wiki_landcover.cli.data.build_retrieved_evidence_windows:main"
georeset-wiki-landcover-build-clip-label-splits = "georeset_wiki_landcover.cli.data.build_clip_label_splits:main"
georeset-wiki-landcover-fetch-sentinel-patches = "georeset_wiki_landcover.cli.data.fetch_sentinel_patches:main"
georeset-wiki-landcover-embed-clip-patches = "georeset_wiki_landcover.cli.data.embed_clip_patches:main"
georeset-wiki-landcover-summarize-classification-experiment = "georeset_wiki_landcover.cli.analysis.summarize_classification_experiment:main"
georeset-wiki-landcover-evaluate-spatial-confidence = "georeset_wiki_landcover.cli.analysis.evaluate_predictions_with_spatial_confidence:main"
georeset-wiki-landcover-evaluate-relevance-stratified = "georeset_wiki_landcover.cli.analysis.evaluate_relevance_stratified_predictions:main"
georeset-wiki-landcover-evaluate-supervision-quality-score = "georeset_wiki_landcover.cli.analysis.evaluate_supervision_quality_score:main"
georeset-wiki-landcover-fetch-wikipedia-article-types = "georeset_wiki_landcover.cli.data.fetch_wikipedia_article_types:main"
georeset-wiki-landcover-evaluate-article-type-relevance-stratified = "georeset_wiki_landcover.cli.analysis.evaluate_article_type_relevance_stratified:main"
georeset-wiki-landcover-evaluate-evidence-card-experiment = "georeset_wiki_landcover.cli.analysis.evaluate_evidence_card_experiment:main"
georeset-wiki-landcover-evaluate-evidence-highlights-experiment = "georeset_wiki_landcover.cli.analysis.evaluate_evidence_highlights_experiment:main"
georeset-wiki-landcover-evaluate-retrieved-evidence-windows-experiment = "georeset_wiki_landcover.cli.analysis.evaluate_retrieved_evidence_windows_experiment:main"
georeset-wiki-landcover-run-clip-linear-probe-experiment = "georeset_wiki_landcover.cli.analysis.run_clip_linear_probe_experiment:main"
georeset-wiki-landcover-run-clip-zero-shot-experiment = "georeset_wiki_landcover.cli.analysis.run_clip_zero_shot_experiment:main"
georeset-wiki-landcover-evaluate-subset-randomization-controls = "georeset_wiki_landcover.cli.analysis.evaluate_subset_randomization_controls:main"
georeset-wiki-landcover-build-image-probe-splits-v2 = "georeset_wiki_landcover.cli.data.build_image_probe_splits_v2:main"
georeset-wiki-landcover-fetch-sentinel-multiscale-patches = "georeset_wiki_landcover.cli.data.fetch_sentinel_multiscale_patches:main"
georeset-wiki-landcover-embed-image-patches = "georeset_wiki_landcover.cli.data.embed_image_patches:main"
georeset-wiki-landcover-run-quality-weighted-image-probe = "georeset_wiki_landcover.cli.analysis.run_quality_weighted_image_probe:main"
georeset-wiki-landcover-run-quality-weighted-image-zero-shot = "georeset_wiki_landcover.cli.analysis.run_quality_weighted_image_zero_shot:main"
georeset-wiki-landcover-evaluate-image-probe-training-policy-controls = "georeset_wiki_landcover.cli.analysis.evaluate_image_probe_training_policy_controls:main"

[tool.ruff]
target-version = "py310"
line-length = 100
lint.select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
]
lint.ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["georeset_wiki_landcover", "scripts"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["georeset_wiki_landcover.utils.*", "georeset_wiki_landcover.config", "georeset_wiki_landcover.contracts"]
strict = true

[[tool.mypy.overrides]]
module = ["georeset_wiki_landcover.classification.*"]
strict = true

[[tool.mypy.overrides]]
module = ["georeset_wiki_landcover.fetchers.*", "georeset_wiki_landcover.visualization.*", "scripts.*"]
strict = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_any_generics = false

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = [
    "--cov=georeset_wiki_landcover.classification",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
]
